[package]
edition = "2021"
name = "embedded-ttf"
version = "0.2.1"
authors = ["Florian Blasius <flovanpt@posteo.de>", "Benoit Peccatte <benoit.peccatte@ruder.io>"]
description = "Font rendering (ttf and otf) with embedded-graphics"
keywords = ["text", "font", "embedded", "no_std"]
categories = ["embedded", "no-std"]
readme = "./README.md"
license = "MIT"
repository = "https://github.com/peckpeck/embedded-ttf"
documentation = "https://docs.rs/embedded-ttf"

[dependencies]
embedded-graphics = "0.8.1"
rusttype = { version = "0.9.3", default-features = false }
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
embedded-graphics-simulator = "0.7.0"
embedded-text = "0.4.0"

[features]
default = ["rusttype/libm-math", "num-traits/libm"]
std = ["rusttype/std", "num-traits/default"]

